# FrechetLib

./: .gitignore  LICENSE  README.md  demo.py  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: demo.py  storks.py
paper_bench/: run_experiments.py
src/frechetlib/: continuous_frechet.py  data.py  discrete_frechet.py  frechet_utils.py  retractable_frechet.py  sweep_frechet.py
tests/: conftest.py  test_continuous_frechet.py  test_discrete_frechet.py  test_ecfr.py  test_frechet_utils.py  test_real_data.py  test_retractable_frechet.py  test_sweep_frechet.py  utils.py
tests/test_data/01/: poly_a.txt  poly_b.txt
tests/test_data/02/: poly_a.txt  poly_b.txt
tests/test_data/03/: poly_a.txt  poly_b.txt
tests/test_data/04/: poly_a.txt  poly_b.txt
tests/test_data/05/: poly_a.txt  poly_b.txt
tests/test_data/06/: poly_a.txt  poly_b.txt
tests/test_data/07/: poly_a.txt  poly_b.txt
tests/test_data/10/: poly_a.txt  poly_b.txt
tests/test_data/11/: poly_a.txt  poly_b.txt
tests/test_data/12/: poly_a.txt  poly_b.txt
