[tool.poetry]
name = "frechetlib"
version = "0.1.0"
description = "A package to compute distances between curves."
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "frechetlib", from = "src" }]


[tool.poetry.urls]
homepage = "https://github.com/eliotwrobson/CodeforcesRunnerEliot"
documentation = "https://github.com/eliotwrobson/CodeforcesRunnerEliot#readme"
repository = "https://github.com/eliotwrobson/CodeforcesRunnerEliot"
changelog = "https://github.com/eliotwrobson/CodeforcesRunnerEliot/releases"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
numba = "^0.58.1"
scipy = "^1.11.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
icecream = "^2.1.3"
matplotlib = "^3.8.3"
ruff = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
plugins = "numpy.typing.mypy_plugin"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["numba.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
