[tool.poetry]
name = "frechetlib"
version = "0.1.0"
description = "A package to compute distances between curves."
authors = ["Eliot Robson <eliot.robson24@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "frechetlib", from = "src" }]


[tool.poetry.urls]
Homepage = "https://github.com/eliotwrobson/FrechetLib"
repository = "https://github.com/eliotwrobson/FrechetLib"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
numba = "^0.58.1"
scipy = "^1.11.4"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
mypy = "^1.7.0"
pytest = "^8.1.1"
pytest-benchmark = "^4.0.0"
icecream = "^2.1.3"
matplotlib = "^3.8.3"
ruff = "^0.3.3"
pooch = "^1.8.1"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
python_version = "3.10"
plugins = "numpy.typing.mypy_plugin"
disallow_untyped_defs = true
# TODO enable typechecking on the examples later.
exclude = "examples"

[[tool.mypy.overrides]]
module = ["numba.*", "pooch.*", "scipy.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
# Add in all library files.
include = ["src/frechetlib/*"]
# Omit init files
omit = ["*/__init__.py"]
